salesforce/force-app/main/default/objects/PromoCode__c/PromoCode__c.object-meta.xml
<CustomObject>
  <label>Promo Code</label>
  <pluralLabel>Promo Codes</pluralLabel>
  <nameField>
    <label>Promo Code Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>