salesforce/force-app/main/default/objects/PromoCode__c/fields/Code__c.field-meta.xml
<CustomField>
  <fullName>Code__c</fullName>
  <label>Code</label>
  <type>Text</type>
  <length>40</length>
  <unique>true</unique>
  <required>true</required>
</CustomField>