salesforce/force-app/main/default/objects/PromoCode__c/fields/DiscountType__c.field-meta.xml
<CustomField>
  <fullName>DiscountType__c</fullName>
  <label>Discount Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Percent</fullName><default>true</default><label>Percent</label></value>
      <value><fullName>Flat</fullName><default>false</default><label>Flat</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>