salesforce/force-app/main/default/objects/PromoCode__c/fields/EligibleRole__c.field-meta.xml
<CustomField>
  <fullName>EligibleRole__c</fullName>
  <label>Eligible Role</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Any</fullName><default>true</default><label>Any</label></value>
      <value><fullName>Rider</fullName><default>false</default><label>Rider</label></value>
      <value><fullName>Driver</fullName><default>false</default><label>Driver</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>