salesforce/force-app/main/default/objects/PromoCode__c/fields/ExpiresAt__c.field-meta.xml
<CustomField>
  <fullName>ExpiresAt__c</fullName>
  <label>Expires At</label>
  <type>DateTime</type>
</CustomField>