salesforce/force-app/main/default/objects/PromoCode__c/fields/MaxUses__c.field-meta.xml
<CustomField>
  <fullName>MaxUses__c</fullName>
  <label>Max Uses</label>
  <type>Number</type>
  <precision>9</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>