salesforce/force-app/main/default/objects/PromoCode__c/fields/Ride__c.field-meta.xml
<CustomField>
  <fullName>Ride__c</fullName>
  <label>Ride</label>
  <type>Lookup</type>
  <referenceTo>Ride__c</referenceTo>
  <relationshipLabel>Promo Codes</relationshipLabel>
  <relationshipName>PromoCodes</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>