salesforce/force-app/main/default/objects/PromoCode__c/fields/Rider__c.field-meta.xml
<CustomField>
  <fullName>Rider__c</fullName>
  <label>Rider</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Promo Codes</relationshipLabel>
  <relationshipName>PromoCodes</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>