salesforce/force-app/main/default/objects/PromoCode__c/fields/UsedCount__c.field-meta.xml
<CustomField>
  <fullName>UsedCount__c</fullName>
  <label>Used Count</label>
  <type>Number</type>
  <precision>9</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>